crates/oxc_react_compiler/tests/snapshots/optional-receiver-optional-method.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/optional-receiver-optional-method.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(2);
	let t0;
	if ($[0] !== props) {
		const x = makeOptionalObject(props);
		const y = makeObject(props);
		t0 = x?.optionalMethod?.(y.a, props.a, foo(y.b), bar(props.b));
		$[0] = props;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	const z = t0;
	return z;
}
