crates/oxc_react_compiler/tests/snapshots/outlined-function-in-nested-declaration.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/outlined-function-in-nested-declaration.js
---
import { c as _c } from "react/compiler-runtime";
// @compilationMode:"infer"
import { useEffect } from "react";
// The outlined effect callback references `mounts`, a binding of the function
// enclosing the compiled component. It must be inserted as a sibling of the
// component (where `mounts` is still in scope), not hoisted to module scope.
// https://github.com/oxc-project/oxc/issues/25536
export function makeProbe() {
	let mounts = 0;
	function MountCounter() {
		const $ = _c(1);
		let t0;
		if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
			t0 = [];
			$[0] = t0;
		} else {
			t0 = $[0];
		}
		useEffect(_temp, t0);
		return null;
	}
	function _temp() {
		mounts = mounts + 1;
	}
	return {
		MountCounter,
		read: () => mounts
	};
}
