crates/oxc_react_compiler/tests/snapshots/outlined-function-module-global-dependencies.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/outlined-function-module-global-dependencies.js
---
import { c as _c } from "react/compiler-runtime";
// @compilationMode:"infer"
import { useEffect } from "react";
import { notify } from "./notify";
const useBridge = function() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = [];
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	useEffect(_temp, t0);
};
function _temp() {
	notify(window.location.href);
}
