crates/oxc_react_compiler/tests/snapshots/outlined-function-outer-capture-declaration.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/outlined-function-outer-capture-declaration.js
---
import { c as _c } from "react/compiler-runtime";
// @compilationMode:"infer"
import { useEffect } from "react";
import { notify } from "./notify";
function createBridge(options) {
	function useBridge() {
		const $ = _c(2);
		let t0;
		if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
			t0 = [];
			$[0] = t0;
		} else {
			t0 = $[0];
		}
		useEffect(_temp, t0);
		let t1;
		if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
			t1 = [];
			$[1] = t1;
		} else {
			t1 = $[1];
		}
		useEffect(_temp2, t1);
	}
	function _temp2() {
		return notify(window.location.href);
	}
	function _temp() {
		return options?.onReady?.();
	}
	return useBridge;
}
